feat: adicionado base da aplicação frontend e tradução com locale do laravel
